// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Loading Indicator Default Size (32px x 32px) 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-dhVevo jXtwLj",
    },
    "children": Array [
      Object {
        "attribs": Object {},
        "children": Array [
          Object {
            "attribs": Object {
              "fill": "#30E8BD",
              "height": "32",
              "viewBox": "0 0 32 32",
              "width": "32",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "cx": "0",
                  "cy": "16",
                  "r": "0",
                  "transform": "translate(8 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0",
                      "calcMode": "spline",
                      "dur": "1.2s",
                      "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                      "keyTimes": "0;0.2;0.7;1",
                      "repeatCount": "indefinite",
                      "values": "0; 4; 0; 0",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                  },
                ],
                "name": "circle",
                "namespace": "http://www.w3.org/2000/svg",
                "next": Object {
                  "attribs": Object {
                    "cx": "0",
                    "cy": "16",
                    "r": "0",
                    "transform": "translate(16 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0.3",
                        "calcMode": "spline",
                        "dur": "1.2s",
                        "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                        "keyTimes": "0;0.2;0.7;1",
                        "repeatCount": "indefinite",
                        "values": "0; 4; 0; 0",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                    },
                  ],
                  "name": "circle",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": Object {
                    "attribs": Object {
                      "cx": "0",
                      "cy": "16",
                      "r": "0",
                      "transform": "translate(24 0)",
                    },
                    "children": Array [
                      Object {
                        "attribs": Object {
                          "attributeName": "r",
                          "begin": "0.6",
                          "calcMode": "spline",
                          "dur": "1.2s",
                          "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                          "keyTimes": "0;0.2;0.7;1",
                          "repeatCount": "indefinite",
                          "values": "0; 4; 0; 0",
                        },
                        "children": Array [],
                        "name": "animate",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "attributeName": undefined,
                          "begin": undefined,
                          "calcMode": undefined,
                          "dur": undefined,
                          "keySplines": undefined,
                          "keyTimes": undefined,
                          "repeatCount": undefined,
                          "values": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "attributeName": undefined,
                          "begin": undefined,
                          "calcMode": undefined,
                          "dur": undefined,
                          "keySplines": undefined,
                          "keyTimes": undefined,
                          "repeatCount": undefined,
                          "values": undefined,
                        },
                      },
                    ],
                    "name": "circle",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "cx": undefined,
                      "cy": undefined,
                      "r": undefined,
                      "transform": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "cx": undefined,
                      "cy": undefined,
                      "r": undefined,
                      "transform": undefined,
                    },
                  },
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                },
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
                "x-attribsPrefix": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
              },
              Object {
                "attribs": Object {
                  "cx": "0",
                  "cy": "16",
                  "r": "0",
                  "transform": "translate(16 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0.3",
                      "calcMode": "spline",
                      "dur": "1.2s",
                      "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                      "keyTimes": "0;0.2;0.7;1",
                      "repeatCount": "indefinite",
                      "values": "0; 4; 0; 0",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                  },
                ],
                "name": "circle",
                "namespace": "http://www.w3.org/2000/svg",
                "next": Object {
                  "attribs": Object {
                    "cx": "0",
                    "cy": "16",
                    "r": "0",
                    "transform": "translate(24 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0.6",
                        "calcMode": "spline",
                        "dur": "1.2s",
                        "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                        "keyTimes": "0;0.2;0.7;1",
                        "repeatCount": "indefinite",
                        "values": "0; 4; 0; 0",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                    },
                  ],
                  "name": "circle",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                },
                "parent": [Circular],
                "prev": Object {
                  "attribs": Object {
                    "cx": "0",
                    "cy": "16",
                    "r": "0",
                    "transform": "translate(8 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0",
                        "calcMode": "spline",
                        "dur": "1.2s",
                        "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                        "keyTimes": "0;0.2;0.7;1",
                        "repeatCount": "indefinite",
                        "values": "0; 4; 0; 0",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                    },
                  ],
                  "name": "circle",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                },
                "type": "tag",
                "x-attribsNamespace": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
                "x-attribsPrefix": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
              },
              Object {
                "attribs": Object {
                  "cx": "0",
                  "cy": "16",
                  "r": "0",
                  "transform": "translate(24 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0.6",
                      "calcMode": "spline",
                      "dur": "1.2s",
                      "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                      "keyTimes": "0;0.2;0.7;1",
                      "repeatCount": "indefinite",
                      "values": "0; 4; 0; 0",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                  },
                ],
                "name": "circle",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": Object {
                  "attribs": Object {
                    "cx": "0",
                    "cy": "16",
                    "r": "0",
                    "transform": "translate(16 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0.3",
                        "calcMode": "spline",
                        "dur": "1.2s",
                        "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                        "keyTimes": "0;0.2;0.7;1",
                        "repeatCount": "indefinite",
                        "values": "0; 4; 0; 0",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                    },
                  ],
                  "name": "circle",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": Object {
                    "attribs": Object {
                      "cx": "0",
                      "cy": "16",
                      "r": "0",
                      "transform": "translate(8 0)",
                    },
                    "children": Array [
                      Object {
                        "attribs": Object {
                          "attributeName": "r",
                          "begin": "0",
                          "calcMode": "spline",
                          "dur": "1.2s",
                          "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                          "keyTimes": "0;0.2;0.7;1",
                          "repeatCount": "indefinite",
                          "values": "0; 4; 0; 0",
                        },
                        "children": Array [],
                        "name": "animate",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "attributeName": undefined,
                          "begin": undefined,
                          "calcMode": undefined,
                          "dur": undefined,
                          "keySplines": undefined,
                          "keyTimes": undefined,
                          "repeatCount": undefined,
                          "values": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "attributeName": undefined,
                          "begin": undefined,
                          "calcMode": undefined,
                          "dur": undefined,
                          "keySplines": undefined,
                          "keyTimes": undefined,
                          "repeatCount": undefined,
                          "values": undefined,
                        },
                      },
                    ],
                    "name": "circle",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "cx": undefined,
                      "cy": undefined,
                      "r": undefined,
                      "transform": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "cx": undefined,
                      "cy": undefined,
                      "r": undefined,
                      "transform": undefined,
                    },
                  },
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                },
                "type": "tag",
                "x-attribsNamespace": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
                "x-attribsPrefix": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
              },
            ],
            "name": "svg",
            "namespace": "http://www.w3.org/2000/svg",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "fill": undefined,
              "height": undefined,
              "viewBox": undefined,
              "width": undefined,
              "xmlns": "http://www.w3.org/2000/xmlns/",
            },
            "x-attribsPrefix": Object {
              "fill": undefined,
              "height": undefined,
              "viewBox": undefined,
              "width": undefined,
              "xmlns": "",
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`Storyshots Loading Indicator Prop-defined size (100px x 100px) 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-dhVevo jXtwLj",
    },
    "children": Array [
      Object {
        "attribs": Object {},
        "children": Array [
          Object {
            "attribs": Object {
              "fill": "#30E8BD",
              "height": "100",
              "viewBox": "0 0 100 100",
              "width": "100",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "cx": "0",
                  "cy": "50",
                  "r": "0",
                  "transform": "translate(25 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0",
                      "calcMode": "spline",
                      "dur": "1.2s",
                      "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                      "keyTimes": "0;0.2;0.7;1",
                      "repeatCount": "indefinite",
                      "values": "0; 12; 0; 0",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                  },
                ],
                "name": "circle",
                "namespace": "http://www.w3.org/2000/svg",
                "next": Object {
                  "attribs": Object {
                    "cx": "0",
                    "cy": "50",
                    "r": "0",
                    "transform": "translate(50 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0.3",
                        "calcMode": "spline",
                        "dur": "1.2s",
                        "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                        "keyTimes": "0;0.2;0.7;1",
                        "repeatCount": "indefinite",
                        "values": "0; 12; 0; 0",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                    },
                  ],
                  "name": "circle",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": Object {
                    "attribs": Object {
                      "cx": "0",
                      "cy": "50",
                      "r": "0",
                      "transform": "translate(75 0)",
                    },
                    "children": Array [
                      Object {
                        "attribs": Object {
                          "attributeName": "r",
                          "begin": "0.6",
                          "calcMode": "spline",
                          "dur": "1.2s",
                          "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                          "keyTimes": "0;0.2;0.7;1",
                          "repeatCount": "indefinite",
                          "values": "0; 12; 0; 0",
                        },
                        "children": Array [],
                        "name": "animate",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "attributeName": undefined,
                          "begin": undefined,
                          "calcMode": undefined,
                          "dur": undefined,
                          "keySplines": undefined,
                          "keyTimes": undefined,
                          "repeatCount": undefined,
                          "values": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "attributeName": undefined,
                          "begin": undefined,
                          "calcMode": undefined,
                          "dur": undefined,
                          "keySplines": undefined,
                          "keyTimes": undefined,
                          "repeatCount": undefined,
                          "values": undefined,
                        },
                      },
                    ],
                    "name": "circle",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": [Circular],
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "cx": undefined,
                      "cy": undefined,
                      "r": undefined,
                      "transform": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "cx": undefined,
                      "cy": undefined,
                      "r": undefined,
                      "transform": undefined,
                    },
                  },
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                },
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
                "x-attribsPrefix": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
              },
              Object {
                "attribs": Object {
                  "cx": "0",
                  "cy": "50",
                  "r": "0",
                  "transform": "translate(50 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0.3",
                      "calcMode": "spline",
                      "dur": "1.2s",
                      "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                      "keyTimes": "0;0.2;0.7;1",
                      "repeatCount": "indefinite",
                      "values": "0; 12; 0; 0",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                  },
                ],
                "name": "circle",
                "namespace": "http://www.w3.org/2000/svg",
                "next": Object {
                  "attribs": Object {
                    "cx": "0",
                    "cy": "50",
                    "r": "0",
                    "transform": "translate(75 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0.6",
                        "calcMode": "spline",
                        "dur": "1.2s",
                        "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                        "keyTimes": "0;0.2;0.7;1",
                        "repeatCount": "indefinite",
                        "values": "0; 12; 0; 0",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                    },
                  ],
                  "name": "circle",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                },
                "parent": [Circular],
                "prev": Object {
                  "attribs": Object {
                    "cx": "0",
                    "cy": "50",
                    "r": "0",
                    "transform": "translate(25 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0",
                        "calcMode": "spline",
                        "dur": "1.2s",
                        "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                        "keyTimes": "0;0.2;0.7;1",
                        "repeatCount": "indefinite",
                        "values": "0; 12; 0; 0",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                    },
                  ],
                  "name": "circle",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                },
                "type": "tag",
                "x-attribsNamespace": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
                "x-attribsPrefix": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
              },
              Object {
                "attribs": Object {
                  "cx": "0",
                  "cy": "50",
                  "r": "0",
                  "transform": "translate(75 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {
                      "attributeName": "r",
                      "begin": "0.6",
                      "calcMode": "spline",
                      "dur": "1.2s",
                      "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                      "keyTimes": "0;0.2;0.7;1",
                      "repeatCount": "indefinite",
                      "values": "0; 12; 0; 0",
                    },
                    "children": Array [],
                    "name": "animate",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "attributeName": undefined,
                      "begin": undefined,
                      "calcMode": undefined,
                      "dur": undefined,
                      "keySplines": undefined,
                      "keyTimes": undefined,
                      "repeatCount": undefined,
                      "values": undefined,
                    },
                  },
                ],
                "name": "circle",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": Object {
                  "attribs": Object {
                    "cx": "0",
                    "cy": "50",
                    "r": "0",
                    "transform": "translate(50 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {
                        "attributeName": "r",
                        "begin": "0.3",
                        "calcMode": "spline",
                        "dur": "1.2s",
                        "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                        "keyTimes": "0;0.2;0.7;1",
                        "repeatCount": "indefinite",
                        "values": "0; 12; 0; 0",
                      },
                      "children": Array [],
                      "name": "animate",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "attributeName": undefined,
                        "begin": undefined,
                        "calcMode": undefined,
                        "dur": undefined,
                        "keySplines": undefined,
                        "keyTimes": undefined,
                        "repeatCount": undefined,
                        "values": undefined,
                      },
                    },
                  ],
                  "name": "circle",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": Object {
                    "attribs": Object {
                      "cx": "0",
                      "cy": "50",
                      "r": "0",
                      "transform": "translate(25 0)",
                    },
                    "children": Array [
                      Object {
                        "attribs": Object {
                          "attributeName": "r",
                          "begin": "0",
                          "calcMode": "spline",
                          "dur": "1.2s",
                          "keySplines": "0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8",
                          "keyTimes": "0;0.2;0.7;1",
                          "repeatCount": "indefinite",
                          "values": "0; 12; 0; 0",
                        },
                        "children": Array [],
                        "name": "animate",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "attributeName": undefined,
                          "begin": undefined,
                          "calcMode": undefined,
                          "dur": undefined,
                          "keySplines": undefined,
                          "keyTimes": undefined,
                          "repeatCount": undefined,
                          "values": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "attributeName": undefined,
                          "begin": undefined,
                          "calcMode": undefined,
                          "dur": undefined,
                          "keySplines": undefined,
                          "keyTimes": undefined,
                          "repeatCount": undefined,
                          "values": undefined,
                        },
                      },
                    ],
                    "name": "circle",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": [Circular],
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "cx": undefined,
                      "cy": undefined,
                      "r": undefined,
                      "transform": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "cx": undefined,
                      "cy": undefined,
                      "r": undefined,
                      "transform": undefined,
                    },
                  },
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "cx": undefined,
                    "cy": undefined,
                    "r": undefined,
                    "transform": undefined,
                  },
                },
                "type": "tag",
                "x-attribsNamespace": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
                "x-attribsPrefix": Object {
                  "cx": undefined,
                  "cy": undefined,
                  "r": undefined,
                  "transform": undefined,
                },
              },
            ],
            "name": "svg",
            "namespace": "http://www.w3.org/2000/svg",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "fill": undefined,
              "height": undefined,
              "viewBox": undefined,
              "width": undefined,
              "xmlns": "http://www.w3.org/2000/xmlns/",
            },
            "x-attribsPrefix": Object {
              "fill": undefined,
              "height": undefined,
              "viewBox": undefined,
              "width": undefined,
              "xmlns": "",
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
